--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <a href="applications.html">Applications</a>
 </nav>
 <div class="background">
-<h1>Test</h1>
+<h1>Testing</h1>
 <p>Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet
 </p>
 
