--- a/index.html
+++ b/index.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<meta name="author" content="Nathan Bickel">
+<meta name="description" content="Minecraft,Vanilla,Survival,HermitCraft">
+<meta name="keywords" content="Minecraft,Vanilla,Survival,HermitCraft">
 <link rel="stylesheet" type="text/css" href="index.css">
-	<title>CJServer - Home</title>
+<title>ScatterCraft - Home</title>
 </head>
 <body class="guardian">
 <nav>
 <a href="index.html">Home</a>
-<a href="contact.html">Contact Information</a>
+<a href="members.html">Members</a>
 <a href="donations.html">Donations</a>
-<a href="applications.html">Applications</a>
+<a href="rules.html">Rules</a>
 </nav>
-<div class="background">
-<h1>Testing</h1>
-<p>Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet, consectitur adispscing elit Lorem ipsum dolor sit amet
-</p>
+<h1 class="top">Home</h1>
+<div class="text">
+<p>ScatterCraft is a vanilla, whitelisted Minecraft server. It was inspired by HermitCraft, a server where popular content makers play together and upload videos of them playing. We started our first world in April of 2016 using the seed that HermitCraft used for their fourth season, and we plan to start our second world and first season on May 29, 2017, using the seed that HermitCraft is using for their fifth season. A few of us will be recording videos on there, but you certainly do not have to be a content maker to join. If you're looking for an idea of what sort of things we do on here, the backgrounds of all four pages were all built in legitimate survival on ScatterCraft. If you see things that look like they were built in creative when you're on, we promise: They weren't. We just have a lot of talented and motivated builders. 
+<br><br>We do have a few slight modifications to the game to make it more friendly for a multiplayer server, similar to Hermitcraft. There are eight of them:
+<ul>
+<li>The dungeon count has been cranked up to max so more people can have personal XP farms.
+<li>Only one person has to sleep to pass the night so that an AFK player doesn't stop everyone from sleeping.
+<li>The ender dragon drops an elytra so that everyone can have one (or two).
+<li>A shulker drops 2 shells 100% so technical players can get more shulker boxes.
+<li>Enderman griefing (but not the mobGriefing gamerule) is disabled so people's builds don't get destroyed.
+<li>The doFireTick gamerule is disabled so people's builds don't get burned down.
+<li>The maxEntityCramming gamerule is set to 200 so people can make farms that revolve around mobs building up but not crash the server.
+<li>Player heads can sometimes be found in dungeons, and some mobs occasionally drop their heads when killed by a player.
+</ul>
+<p>If you're looking for an intensive, quick-paced server, this probably isn't the right place for you. But if you're the sort of person that likes to come home at night and spend a relaxing hour chipping away at a big project in your singleplayer world, no matter who you are, we would love to have you. To apply to join, go <a href="https://goo.gl/forms/ckCAYJEbUzTkVYYo1" target="_blank">here</a> after reading the rules thorughly. You should expect a reply via email within 48 hours from us - if you don't, something's probably wrong. Feel free to email one of us after 48 hours and ask if we received your application.
+<br>
+<br>Server IP: scattercraft.mc.gg
+<br>Seed: -9095450570362222980
+<br>Discord: Mgz2zkk
+</div>
+<footer>
+Questions? Concerns? Feel free to email us at scattercraftstaff@gmail.com.
+</footer>
 
 </body>
 </html>
-
