--- a/members.html
+++ b/members.html
@@ -7,9 +7,9 @@
 <meta name="description" content="Minecraft,Vanilla,Survival,HermitCraft">
 <meta name="keywords" content="Minecraft,Vanilla,Survival,HermitCraft">
 <link rel="stylesheet" type="text/css" href="index.css">
-	<title>ScatterCraft - Donations</title>
+	<title>ScatterCraft - Members</title>
 </head>
-<body class="tunnel">
+<body class="base">
 <nav>
 <a href="index.html">Home</a>
 <a href="members.html">Members</a>
