Final Major Change 30/4/17

--- a/members.html
+++ b/members.html
@@ -9,16 +9,29 @@
 <link rel="stylesheet" type="text/css" href="index.css">
 	<title>ScatterCraft - Members</title>
 </head>
-<body class="base">
+<body class="tunnel">
 <nav>
 <a href="index.html">Home</a>
 <a href="members.html">Members</a>
 <a href="donations.html">Donations</a>
 <a href="rules.html">Rules</a>
 </nav>
+<h1 class="top">Members</h1>
+<div class="text">
+<p>ThatGuyJimBob - Co-Owner with DrRedBuilds - 29/4/16
+<br>DrRedBuilds - Co-Owner with ThatGuyJimBob - 29/4/16
+<br>BelgianTarHeel - Administrator - 29/4/16
+<br>BassCannon9000 - Administrator - 29/4/16
+<br>NuggetLatte - Founding Father - 29/4/16
+<br>EpicDiamonight - Founding Father - 29/4/16
+<br>TheGreatWizar - Founding Father - 29/4/16
+<br><br>New members names will be added here, along with their join date.
+</div>
 <footer>
-Questions? Concerns? Feel free to email us at scattercraftstaff@gmail.com.
+Questions? Comments? Feel free to email us at scattercraftstaff@gmail.com.
+<div class="bottom">
+Website Written and Designed by DrRedBuilds 2017
+</div>
 </footer>
-
 </body>
 </html>
