--- a/rules.html
+++ b/rules.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<meta name="author" content="Nathan Bickel">
+<meta name="description" content="Minecraft,Vanilla,Survival,HermitCraft">
+<meta name="keywords" content="Minecraft,Vanilla,Survival,HermitCraft">
 <link rel="stylesheet" type="text/css" href="index.css">
-	<title>CJServer - Applications</title>
+	<title>ScatterCraft - Rules</title>
 </head>
 <body class="nether">
 <nav>
 <a href="index.html">Home</a>
-<a href="contact.html">Contact Information</a>
+<a href="members.html">Members</a>
 <a href="donations.html">Donations</a>
-<a href="applications.html">Applications</a>
+<a href="rules.html">Rules</a>
 </nav>
-
+<h1 class="top">Rules</h1>
+<div class="text">
+<p>Okay, so we know that you (hopefully) have figured these out for yourself, but this is just a friendly reminder that, even though we have no plugins that stop you from breaking any of these rules, ScatterCraft is not an anarchy server. If we see you breaking any of these rules, we'll give you a warning, and we'll be watching you closely. If we see a second violation, you will be banned. If, after a year's time, you would like to apply to rejoin, we'll give you one last chance. However, if you break another rule, you will be banned. Forever. We don't want to be that server that has 60 rules that you have to read the second you join. But we also want to make sure that people's hard work doesn't get ruined by one person. So here are the rules:
+<br>
+<ol>
+<li><strong>No Griefing.</strong><br>We hope you expected this one. If someone builds something, don't destroy it&mdash;it's really quite simple. We have no problems with you pranking people&mdash;just don't cross the line between pranking and griefing. Pranking is funny&mdash;griefing is anger-inducing. Don't make your pranks anger-inducing.</li>
+<li><strong>No Stealing.</strong><br>Again, pretty self-explanatory. If someone is storing something, don't take it without their permission. There might be a few exceptions&mdash;the owner of a well established base (probably) wouldn't mind you borrowing a few pieces of chicken or dirt. On the other hand, they probably would mind you taking a stack of diamond blocks. Don't let your "borrowing" turn into stealing, and remember, it's always better to ask.</li>
+<li><strong>No Hacking.</strong><br>Okay, if you don't know this one, you shouldn't be here. We have zero respect for people that are trying to give themselves an unfair advantage, and if we see you hacking, you're done. No second chance. If you really made an honest mistake, you can re-apply in a year, but frankly, we probably won't be very inclined to let you back in. And even if we do, if we even see the faintest sign of you hacking, we'll ban you. Permanently.</li>
+<li><strong>Don't Abuse Chat.</strong><br>We'd like to keep this a family-friendly server, so don't swear or be inappropriate, and don't be that guy that writes the same message every thirty seconds in chat or writes in all caps for every message. Of course you can get excited in chat if something important happens, but writing all your messages in all caps implies that you think that your messages are more important than everyone else's. Normally, they're really not. The main thing, though, is just to be nice to each other. Don't start wars in chat for no reason, and be respectful. It makes it nicer for everyone.</li>
+<li><strong>At Least Try with your Buildings.</strong><br>Okay, so obviously we're not going to kick you out for not being awesome at building. But we try to make our communal areas look nice, so please don't just build a dirt cube and live in it for the whole season. We don't mind simplistic builds, but at least make an effort to make them not ugly (at least when you're building next to other people). We have a lot of talented builders on the server; if you're stuck on how to make your build look nice, they'll be glad to help out.</li>
+<li><strong>Use Common Sense.</strong><br>So we can't really enforce this one, but if you're trying to get other people on ScatterCraft to like you, this is a great rule to follow. Just consider whether your actions are affecting anyone else, and if they are, whether you would want to be affected in that way if you were them. If you wouldn't, stop doing it. We are looking for mature members, so please: don't do anything stupid.</li>
+</ol>
+</div>
+<footer>
+Questions? Comments? Feel free to email us at scattercraftstaff@gmail.com.
+<div class="bottom">
+Website Written and Designed by DrRedBuilds 2017
+</div>
+</footer>
 </body>
 </html>
