--- a/index.html
+++ b/index.html
@@ -18,27 +18,31 @@
 </nav>
 <h1 class="top">Home</h1>
 <div class="text">
-<p>ScatterCraft is a vanilla, whitelisted Minecraft server. It was inspired by HermitCraft, a server where popular content makers play together and upload videos of them playing. We started our first world in April of 2016 using the seed that HermitCraft used for their fourth season, and we plan to start our second world and first season on May 29, 2017, using the seed that HermitCraft is using for their fifth season. A few of us will be recording videos on there, but you certainly do not have to be a content maker to join. If you're looking for an idea of what sort of things we do on here, the backgrounds of all four pages were all built in legitimate survival on ScatterCraft. If you see things that look like they were built in creative when you're on, we promise: They weren't. We just have a lot of talented and motivated builders. 
-<br><br>We do have a few slight modifications to the game to make it more friendly for a multiplayer server, similar to Hermitcraft. There are eight of them:
+<p>ScatterCraft is a vanilla, whitelisted Minecraft survival server. It was inspired by <a href="http://hermitcraft.com" target="_blank">HermitCraft</a>, a server where popular content makers play together and upload videos of them playing. We started our first world in April of 2016 using the seed that HermitCraft used for their fourth season, and we plan to start our second world and first season on May 29, 2017, using the seed that HermitCraft is using for their fifth season. A few of us will be recording videos on there, but you certainly do not have to be a content maker to join. If you're looking for an idea of what sort of things we do on here, the backgrounds of all four pages were all built in legitimate survival on ScatterCraft. If you see things that look like they were built in creative when you're on, we promise: they weren't. We just have very talented and motivated builders. 
+<p class="listheading">We do have a few slight modifications to the game to make it more friendly for a multiplayer server, similar to Hermitcraft. There are eight of them:
 <ul>
-<li>The dungeon count has been cranked up to max so more people can have personal XP farms.
+<li>The dungeon count has been cranked up to max so more people can have personal mob farms.
 <li>Only one person has to sleep to pass the night so that an AFK player doesn't stop everyone from sleeping.
-<li>The ender dragon drops an elytra so that everyone can have one (or two).
-<li>A shulker drops 2 shells 100% so technical players can get more shulker boxes.
-<li>Enderman griefing (but not the mobGriefing gamerule) is disabled so people's builds don't get destroyed.
+<li>The ender dragon drops an elytra so that everyone on the server can have one.
+<li>A shulker drops 2 shells 100% of the time so that technical players can get more shulker boxes.
+<li>Enderman griefing (but not the mobGriefing gamerule) is disabled so that the terrain don't get destroyed over time.
 <li>The doFireTick gamerule is disabled so people's builds don't get burned down.
-<li>The maxEntityCramming gamerule is set to 200 so people can make farms that revolve around mobs building up but not crash the server.
+<li>The maxEntityCramming gamerule is set to 200 so people can make farms that revolve around mobs building up, but not crash the server.
 <li>Player heads can sometimes be found in dungeons, and some mobs occasionally drop their heads when killed by a player.
 </ul>
-<p>If you're looking for an intensive, quick-paced server, this probably isn't the right place for you. But if you're the sort of person that likes to come home at night and spend a relaxing hour chipping away at a big project in your singleplayer world, no matter who you are, we would love to have you. To apply to join, go <a href="https://goo.gl/forms/ckCAYJEbUzTkVYYo1" target="_blank">here</a> after reading the rules thorughly. You should expect a reply via email within 48 hours from us - if you don't, something's probably wrong. Feel free to email one of us after 48 hours and ask if we received your application.
+<p>If you're looking for an intensive, quick-paced server, this probably isn't the right place for you. But if you're the sort of person that likes to come home at night and spend a relaxing hour chipping away at a big project in your survival world, no matter who you are, we would love to have you. To apply to join, go <a href="https://goo.gl/forms/ckCAYJEbUzTkVYYo1" target="_blank">here</a> after reading the rules thorughly. Please also email us at <i>scattercraftstaff@gmail.com</i> and let us know you applied. You should expect an email in response within 48 hours.
 <br>
-<br>Server IP: scattercraft.mc.gg
 <br>Seed: -9095450570362222980
+<br>Server IP: scattercraft.mc.gg
+<br>Host: <a href="https://mcprohosting.com" target="_blank">MCProHosting</a>
+<br>Difficulty: Normal
 <br>Discord: Mgz2zkk
 </div>
 <footer>
-Questions? Concerns? Feel free to email us at scattercraftstaff@gmail.com.
+Questions? Comments? Feel free to email us at scattercraftstaff@gmail.com.
+<div class="bottom">
+Website Written and Designed by DrRedBuilds 2017
+</div>
 </footer>
-
 </body>
 </html>
