Member List Update 11/5/17
Added CubeOfRubik101 to the Member List. Joined 11/5/17.

--- a/members.html
+++ b/members.html
@@ -25,6 +25,7 @@
 <br>NuggetLatte - Founding Father - 29/4/16
 <br>EpicDiamonight - Founding Father - 29/4/16
 <br>TheGreatWizar - Founding Father - 29/4/16
+<br>CubeOfRubik101 - Member - 11/5/17
 <br><br>New members names will be added here, along with their join date.
 </div>
 <footer>
