--- a/members.html
+++ b/members.html
@@ -22,8 +22,8 @@
 <br>DrRedBuilds - Co-Owner with ThatGuyJimBob - 29/4/16
 <br>BelgianTarHeel - Administrator - 29/4/16
 <br>BassCannon9000 - Administrator - 29/4/16
+<br>EpicDiamonight - Administrator - 29/4/16
 <br>NuggetLatte - Founding Father - 29/4/16
-<br>EpicDiamonight - Founding Father - 29/4/16
 <br>TheGreatWizar - Founding Father - 29/4/16
 <br>CubeOfRubik101 - Member - 11/5/17
 <br><br>New members names will be added here, along with their join date.
