--- a/donations.html
+++ b/donations.html
@@ -23,6 +23,9 @@
 <p>This means you can do things to improve server performance, such as kicking AFK players because of lag or going into spectator mode to investigate entity build-up. This does <i>not</i> mean that you can do anything to benefit yourself, such as giving yourself items or going into creative mode. If we see you abusing any of these priviliges, you will lose them. It is your choice from there whether you want to keep donating or not. 
 <p>If you decide stop donating, you will get the former donator rank on Discord and you will be put in the former donator part of the donator hall.
 <p>Donating will make the server better for everyone, and we appreciate every donation, no matter how small. We can keep the server up without donations, but they are certainly a big help. To donate, go <a href="https://www.paypal.me/ScatterCraft" target="_blank">here</a>.
+<br><br>Current Monthly Donators:
+<br>ThatGuyJimBob - $7.49
+<br>EpicDiamonight - $2.50
 </div>
 <footer>
 Questions? Comments? Feel free to email us at scattercraftstaff@gmail.com.
