--- a/members.html
+++ b/members.html
@@ -28,6 +28,7 @@
 <br>TheGreatWizar - Founding Father - 29/4/16
 <br>CubeOfRubik101 - Member - 11/5/17
 <br>Small_bros2 - Member - 27/5/17
+<br>100ajk - Member - 27/5/17
 <br><br>New members names will be added here, along with their join date.
 </div>
 <footer>
