28/5/17 - Updated Meta Keywords for SEO and Updated Members List
Added AlexTheisen - Member - 27/5/17

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <meta name="author" content="Nathan Bickel">
-<meta name="description" content="Minecraft,Vanilla,Survival,HermitCraft">
+<meta name="description" content="Minecraft,Vanilla,Survival,HermitCraft,Small,1.11.2,Server,Friendly,Community">
 <meta name="keywords" content="Minecraft,Vanilla,Survival,HermitCraft">
 <link rel="stylesheet" type="text/css" href="index.css">
 <title>ScatterCraft - Home</title>
