--- a/members.html
+++ b/members.html
@@ -29,6 +29,7 @@
 <br>CubeOfRubik101 - Member - 11/5/17
 <br>Small_bros2 - Member - 27/5/17
 <br>100ajk - Member - 27/5/17
+<br>AlexTheisen - Member - 27/5/17
 <br><br>New members names will be added here, along with their join date.
 </div>
 <footer>
