--- a/members.html
+++ b/members.html
@@ -30,6 +30,7 @@
 <br>Small_bros2 - Member - 27/5/17
 <br>100ajk - Member - 27/5/17
 <br>AlexTheisen - Member - 27/5/17
+<br>Eb_Major - Member - 29/5/17
 <br><br>New members names will be added here, along with their join date.
 </div>
 <footer>
