Updated Members List and Index
Added xSeph00 - Member - 29/5/17
Added corific - Member - 29/5/17
Added murrayboy123 - Member - 30/5/17
Added ItsMrATC - Member - 1/6/17
Added Sirbonk - Member - 2/6/17
Added nas2899 - Member - 3/6/17
Added TryHarddNinja - Member - 3/6/17
Added 523bob - Member - 3/6/17
Added ZomZee - Member - 3/6/17
Added EpicGingerCat - Member - 3/6/17
Added Irrelativity - Member - 3/6/17
Added TBNRGiga - Member - 4/6/17
Added kathrinethegreat - Member - 4/6/17

Removed modification saying that mobs and players drop heads
Changed Shulker Shell Modification Notification

--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
 <li>The dungeon count has been cranked up to max so more people can have personal mob farms.
 <li>Only one person has to sleep to pass the night so that an AFK player doesn't stop everyone from sleeping.
 <li>The ender dragon drops an elytra so that everyone on the server can have one.
-<li>A shulker drops 2 shells 100% of the time so that technical players can get more shulker boxes.
+<li>A shulker drops more shells than vanilla so that technical players can get more shulker boxes.
 <li>Enderman griefing (but not the mobGriefing gamerule) is disabled so that the terrain don't get destroyed over time.
 <li>The doFireTick gamerule is disabled so people's builds don't get burned down.
 <li>The maxEntityCramming gamerule is set to 200 so people can make farms that revolve around mobs building up, but not crash the server.
-<li>Player heads can sometimes be found in dungeons, and some mobs occasionally drop their heads when killed by a player.
 </ul>
 <p>If you're looking for an intensive, quick-paced server, this probably isn't the right place for you. But if you're the sort of person that likes to come home at night and spend a relaxing hour chipping away at a big project in your survival world, no matter who you are, we would love to have you. To apply to join, go <a href="https://goo.gl/forms/ckCAYJEbUzTkVYYo1" target="_blank">here</a> after reading the rules thorughly. Please also email us at <i>scattercraftstaff@gmail.com</i> and let us know you applied. You should expect an email in response within 48 hours.
 <br>
