--- a/members.html
+++ b/members.html
@@ -31,6 +31,19 @@
 <br>100ajk - Member - 27/5/17
 <br>AlexTheisen - Member - 27/5/17
 <br>Eb_Major - Member - 29/5/17
+<br>xSeph00 - Member - 29/5/17
+<br>corific - Member - 29/5/17
+<br>murrayboy123 - Member - 30/5/17
+<br>ItsMrATC - Member - 1/6/17
+<br>Sirbonk - Member - 2/6/17
+<br>nas2899 - Member - 3/6/17
+<br>TryHarddNinja - Member - 3/6/17
+<br>523bob - Member - 3/6/17
+<br>ZomZee - Member - 3/6/17
+<br>EpicGingerCat - Member - 3/6/17
+<br>Irrelativity - Member - 3/6/17
+<br>TBNRGiga - Member - 4/6/17
+<br>kathrinethegreat - Member - 4/6/17
 <br><br>New members names will be added here, along with their join date.
 </div>
 <footer>
