Added New Members and Rules
Added Sycho - Member - 4/6/17
Added turboexpress - Member - 4/6/17
Added dcfalcons21_25 - Member - 4/6/17
Added majimaji_ - Member - 4/6/17
Added HenryTheTurtle - Member - 5/6/17
Added antisociql - Member - 5/6/17
Added Mr_Trainz - Member - 5/6/17
Added yoda2014 - Member - 5/6/17
Added GodDarkHUN - Member - 6/6/17
Added Xedrum - Member - 6/6/17
Added Keaska - Member - 7/6/17

--- a/members.html
+++ b/members.html
@@ -44,6 +44,17 @@
 <br>Irrelativity - Member - 3/6/17
 <br>TBNRGiga - Member - 4/6/17
 <br>kathrinethegreat - Member - 4/6/17
+<br>Sycho - Member - 4/6/17
+<br>turboexpress - Member - 4/6/17
+<br>dcfalcons21_25 - Member - 4/6/17
+<br>majimaji_ - Member - 4/6/17
+<br>HenryTheTurtle - Member - 5/6/17
+<br>antisociql - Member - 5/6/17
+<br>Mr_Trainz - Member - 5/6/17
+<br>yoda2014 - Member - 5/6/17
+<br>GodDarkHUN - Member - 6/6/17
+<br>Xedrum - Member - 6/6/17
+<br>Keaska - Member - 7/6/17
 <br><br>New members names will be added here, along with their join date.
 </div>
 <footer>
