--- a/members.html
+++ b/members.html
@@ -20,8 +20,8 @@
 <div class="text">
 <p>ThatGuyJimBob - Co-Owner with DrRedBuilds - 29/4/16
 <br>DrRedBuilds - Co-Owner with ThatGuyJimBob - 29/4/16
-<br>BelgianTarHeel - Administrator - 29/4/16
 <br>EpicDiamonight - Administrator - 29/4/16
+<br>BelgianTarHeel - Founding Father - 29/4/16
 <br>Chaoss__ - Advertisement Executive - 27/5/17
 <br>BassCannon9000 - Founding Father - 29/4/16
 <br>NuggetLatte - Founding Father - 29/4/16
