--- a/members.html
+++ b/members.html
@@ -37,7 +37,6 @@
 <br>ItsMrATC - Member - 1/6/17
 <br>Sirbonk - Member - 2/6/17
 <br>nas2899 - Member - 3/6/17
-<br>TryHarddNinja - Member - 3/6/17
 <br>523bob - Member - 3/6/17
 <br>ZomZee - Member - 3/6/17
 <br>EpicGingerCat - Member - 3/6/17
@@ -55,6 +54,38 @@
 <br>GodDarkHUN - Member - 6/6/17
 <br>Xedrum - Member - 6/6/17
 <br>Keaska - Member - 7/6/17
+<br>johnlonestar - Member - 8/6/17
+<br>Derpy1 - Member - 8/6/17
+<br>Stypher_ - Member - 8/6/17
+<br>Zenith - Member - 9/6/17
+<br>Dancdow - Member - 10/6/17
+<br>Poofeh - Member - 10/6/17
+<br>DexiantYT - Member - 10/6/17
+<br>ProvectusPlays - Member - 11/6/17
+<br>FoxWhal - Member - 12/6/17
+<br>dcfalcons2023 - Member - 12/6/17
+<br>richiegrape - Member - 12/6/17
+<br>Tronz242 - Member - 15/6/17
+<br>NodeyPodey - Member - 15/6/17
+<br>SirDanni - Member - 15/6/17
+<br>WhiteAlpha - Member - 16/6/17
+<br>mitchinsquire - Member - 16/6/17
+<br>cocosito - Member - 16/6/17
+<br>BagOfTrash - Member - 17/6/17
+<br>Katariuss - Member - 17/6/17
+<br>RagingReflexx - Member - 17/6/17
+<br>Mr_SirBacon - Member - 18/6/17
+<br>3E_Spectre - Member - 18/6/17
+<br>FoxInShadow - Member - 18/6/17
+<br>BoiDownTown - Member - 18/6/17
+<br>TimmyGaming - Member - 20/6/17
+<br>XxSkyFixX - Member - 21/6/17
+<br>trixiemattel - Member - 21/6/17
+<br>Hippybanjo - Member - 21/6/17
+<br>Ni5ck - Member - 21/6/17
+<br>Hillund7744 - Member - 22/6/17
+<br>Outersquid258 - Member - 22/6/17
+<br>Agruach - Member - 22/6/17
 <br><br>New members names will be added here, along with their join date.
 </div>
 <footer>
