--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <li>The doFireTick gamerule is disabled so people's builds don't get burned down.
 <li>The maxEntityCramming gamerule is set to 200 so people can make farms that revolve around mobs building up, but not crash the server.
 </ul>
-<p>If you're looking for an intensive, quick-paced server, this probably isn't the right place for you. But if you're the sort of person that likes to come home at night and spend a relaxing hour chipping away at a big project in your survival world, no matter who you are, we would love to have you. To apply to join, go <a href="https://goo.gl/forms/ckCAYJEbUzTkVYYo1" target="_blank">here</a> after reading the rules thorughly. Please also email us at <i>scattercraftstaff@gmail.com</i> and let us know you applied. Appplications are checked bi-weekly on Mondays and Fridays.
+<p>If you're looking for an intensive, quick-paced server, this probably isn't the right place for you. But if you're the sort of person that likes to come home at night and spend a relaxing hour chipping away at a big project in your survival world, no matter who you are, we would love to have you. To apply to join, go <a href="https://goo.gl/forms/ckCAYJEbUzTkVYYo1" target="_blank">here</a> after reading the rules thorughly. Appplications are reviewed bi-weekly on Mondays and Fridays.
 <br>
 <br>Seed: -9095450570362222980
 <br>Server IP: scattercraft.mc.gg
