--- a/members.html
+++ b/members.html
@@ -86,6 +86,19 @@
 <br>Hillund7744 - Member - 22/6/17
 <br>Outersquid258 - Member - 22/6/17
 <br>Agruach - Member - 22/6/17
+<br>strongbeuaty - Member - 22/6/17
+<br>vossdaboss25 - Member - 22/6/17
+<br>BlackAlphaMC - Member - 22/6/17
+<br>DoubleONum - Member - 22/6/17
+<br>fedham - Member - 22/6/17
+<br>DocCow - Member - 22/6/17
+<br>GrapeGhost - Member - 22/6/17
+<br>geekwes2 - Member - 22/6/17
+<br>Dean_Gulberry - Member - 22/6/17
+<br>redwaller87 - Member - 22/6/17
+<br>skimboard101 - Member - 22/6/17
+<br>mstolarczyk12 - Member - 22/6/17
+<br>redstonewarriors - Member - 22/6/17
 <br><br>New members names will be added here, along with their join date.
 </div>
 <footer>
