--- a/members.html
+++ b/members.html
@@ -87,18 +87,29 @@
 <br>Outersquid258 - Member - 22/6/17
 <br>Agruach - Member - 22/6/17
 <br>strongbeuaty - Member - 22/6/17
-<br>vossdaboss25 - Member - 22/6/17
-<br>BlackAlphaMC - Member - 22/6/17
-<br>DoubleONum - Member - 22/6/17
-<br>fedham - Member - 22/6/17
-<br>DocCow - Member - 22/6/17
-<br>GrapeGhost - Member - 22/6/17
-<br>geekwes2 - Member - 22/6/17
-<br>Dean_Gulberry - Member - 22/6/17
-<br>redwaller87 - Member - 22/6/17
-<br>skimboard101 - Member - 22/6/17
-<br>mstolarczyk12 - Member - 22/6/17
-<br>redstonewarriors - Member - 22/6/17
+<br>vossdaboss25 - Member - 26/6/17
+<br>BlackAlphaMC - Member - 26/6/17
+<br>DoubleONum - Member - 26/6/17
+<br>fedham - Member - 26/6/17
+<br>DocCow - Member - 26/6/17
+<br>GrapeGhost - Member - 26/6/17
+<br>geekwes2 - Member - 26/6/17
+<br>Dean_Gulberry - Member - 26/6/17
+<br>redwaller87 - Member - 26/6/17
+<br>skimboard101 - Member - 26/6/17
+<br>mstolarczyk12 - Member - 26/6/17
+<br>redstonewarriors - Member - 26/6/17
+<br>H_Cashat - Member - 30/6/17
+<br>Ferrlix - Member - 30/6/17
+<br>kittylicker - Member - 30/6/17
+<br>Plasmashark4 - Member - 30/6/17
+<br>xX_T1MB3R_Xx - Member - 30/6/17
+<br>MAD_LOGIC - Member - 30/6/17
+<br>TacoTacoTaco - Member - 30/6/17
+<br>S_W_A_N_K_Y - Member - 30/6/17
+<br>Bump3rs - Member - 30/6/17
+<br>williamjr2004 - Member - 30/6/17
+<br>GhostWolf_YT - Member - 30/6/17
 <br><br>New members names will be added here, along with their join date.
 </div>
 <footer>
