--- a/members.html
+++ b/members.html
@@ -110,7 +110,7 @@
 <br>Bump3rs - Member - 30/6/17
 <br>williamjr2004 - Member - 30/6/17
 <br>GhostWolf_YT - Member - 30/6/17
-<br>CupkakeGirl - Member - 3/7/17
+<br>Luce_Heartfilia - Member - 3/7/17
 <br>User_57204 - Member - 3/7/17
 <br>jewels1118 - Member - 3/7/17
 <br><br>New members names will be added here, along with their join date.
