--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <p>If you're looking for an intensive, quick-paced server, this probably isn't the right place for you. But if you're the sort of person that likes to come home at night and spend a relaxing hour chipping away at a big project in your survival world, no matter who you are, we would love to have you. To apply to join, go <a href="https://goo.gl/forms/ckCAYJEbUzTkVYYo1" target="_blank">here</a> after reading the rules thorughly. Appplications are reviewed bi-weekly on Mondays and Fridays.
 <br>
 <br>Seed: -9095450570362222980
-<br>Server IP: scattercraft.mc-server.net
-<br>Host: <a href="https://mcprohosting.com" target="_blank">MCProHosting</a>
+<br>Server IP: 192.99.20.81:25619
+<br>Host: <a href="https://shockbyte.com" target="_blank">Shockbyte</a>
 <br>Difficulty: Normal
 <br>Discord: Mgz2zkk
 </div>
