--- a/S0W1.html
+++ b/S0W1.html
@@ -17,8 +17,17 @@
 <a href="rules.html">Rules</a>
 <a href="overflow.html">Newest Server</a>
 </nav>
-<h1 class="top">Members</h1>
+<h1 class="top">Season 0, World 1 Members</h1>
 <div class="text">
+<br>ThatGuyJimBob - Owner/Founder - 29/4/16
+<br>DrRedBuilds - Founding Father - 29/4/16
+<br>EpicDiamonight - Founding Father - 29/4/16
+<br>BelgianTarHeel - Founding Father - 29/4/16
+<br>BassCannon9000 - Founding Father - 29/4/16
+<br>NuggetLatte - Founding Father - 29/4/16
+<br>TheGreatWizar - Founding Father - 29/4/16
+</div>
+<center>
 <div class="dropdown">
   <button class="dropbtn">Season 0</button>
   <div class="dropdown-content">
@@ -31,8 +40,7 @@
     <a href="S1W1.html">World 1</a>
   </div>
 </div>
-</div>
-</div>
+</center>
 <footer>
 Questions? Comments? Feel free to email us at scattercraftstaff@gmail.com.
 <div class="bottom">
