--- a/overflow.html
+++ b/overflow.html
@@ -7,9 +7,10 @@
 <meta name="description" content="Minecraft,Vanilla,Survival,HermitCraft">
 <meta name="keywords" content="Minecraft,Vanilla,Survival,HermitCraft">
 <link rel="stylesheet" type="text/css" href="index.css">
-	<title>ScatterCraft - Members</title>
+	<title>ScatterCraft - Newest Server</title>
+<script src="//load.sumome.com/" data-sumo-site-id="7b0e7eb2ca479774765ca60c3b2e305b225462fec860957562b154d4052e5f43" async="async"></script>
 </head>
-<body class="tunnel">
+<body class="murrayboy123">
 <nav>
 <a href="index.html">Home</a>
 <a href="members.html">Members</a>
@@ -17,22 +18,9 @@
 <a href="rules.html">Rules</a>
 <a href="overflow.html">Newest Server</a>
 </nav>
-<h1 class="top">Members</h1>
+<h1 class="top">Newest Server</h1>
 <div class="text">
-<div class="dropdown">
-  <button class="dropbtn">Season 0</button>
-  <div class="dropdown-content">
-    <a href="S0W1.html">World 1</a>
-  </div>
-</div>
-<div class="dropdown">
-  <button class="dropbtn">Season 1</button>
-  <div class="dropdown-content">
-    <a href="S1W1.html">World 1</a>
-  </div>
-</div>
-</div>
-</div>
+<p>So that we can keep our community small, we have decided to cap off our member count at 100. We plan to open another server when we get 25 people interested: However, we ask that you pay three dollars to help cover our costs. If you would like to be contacted when we start the world, please <a data-sumome-listbuilder-id="b5ccb95d-391b-4052-a46b-3fd3f3a5dc8c">click here</a>. At our current trajectory, we expect that we would open our new server sometime in late July or August. 
 <footer>
 Questions? Comments? Feel free to email us at scattercraftstaff@gmail.com.
 <div class="bottom">
