--- a/S1W1.html
+++ b/S1W1.html
@@ -113,8 +113,16 @@
 <br>GhostWolf_YT - Member - 30/6/17 
 <br>Luce_Heartfilia - Member - 3/7/17 
 <br>User_57204 - Member - 3/7/17 
-<br>jewels1118 - Member - 3/7/17 
-<br><br>New members names will be added here, along with their join date.
+<br>jewels1118 - Member - 3/7/17
+<br>MInecraft_wiz05 - Member - 11/7/17
+<br>Purple_Code - Member - 11/7/17
+<br>GhytZyop - Member - 11/7/17
+<br>Adinwarfare220 - Member - 11/7/17
+<br>Legit_bokaj - Member - 11/7/17
+<br>lolcat556 - Member - 11/7/17
+<br>AstateofG - Member - 11/7/17
+<br>aidan5mith - Member - 11/7/17
+<br>
 </div>
 <center>
 <div class="dropdown">
