--- a/overflow.html
+++ b/overflow.html
@@ -20,7 +20,7 @@
 </nav>
 <h1 class="top">Newest Server</h1>
 <div class="text">
-<p>So that we can keep our community small, we have decided to cap off our member count at 100. We plan to open another server when we get 25 people interested: However, we ask that you pay three dollars to help cover our costs. If you would like to be contacted when we start the world, please <a data-sumome-listbuilder-id="b5ccb95d-391b-4052-a46b-3fd3f3a5dc8c">click here</a>. At our current trajectory, we expect that we would open our new server sometime in late July or August. 
+<p>So that we can keep our community small, we have decided to cap off our member count at 100. We plan to open another server on August 1st: However, we ask that you pay three dollars to help cover our costs. If you would like to be contacted when we start the world, please <a data-sumome-listbuilder-id="b5ccb95d-391b-4052-a46b-3fd3f3a5dc8c">click here</a>. Hope to see you soon! 
 <footer>
 Questions? Comments? Feel free to email us at scattercraftstaff@gmail.com.
 <div class="bottom">
