--- a/donations.html
+++ b/donations.html
@@ -29,6 +29,7 @@
 <br><br>One-Time Donations:
 <br>RichieGrape - $20.00 - 4/7/17
 <br>Anonymous - $20.00 - 4/7/17
+<br>Legit_bokaj - $1.00 - 8/7/17
 </div>
 <br>
 <br>
