--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <br>Discord: 9Vyc47d
 <br>Host: <a href="https://shockbyte.com" target="_blank">ShockByte</a>
 <br>
-<br>Vote for us <a href="http://topg.org/Minecraft/in-462656" target="_blank">here</a> so we can get more publicity :-)
+<br><script src="http://minecraft-mp.com/embed.js?id=167878&type=votes&size=normal"></script>
 </div>
 </div>
 <br>
