--- a/S1W1.html
+++ b/S1W1.html
@@ -46,7 +46,7 @@
 <br>TBNRGiga - Member - 4/6/17
 <br>kathrinethegreat - Member - 4/6/17
 <br>Sycho - Member - 4/6/17
-<br>turboexpress - Member - 4/6/17
+<br>minecraftmom75 - Member - 4/6/17
 <br>dcfalcons21_25 - Member - 4/6/17
 <br>majimaji_ - Member - 4/6/17
 <br>HenryTheTurtle - Member - 5/6/17
