--- a/overflow.html
+++ b/overflow.html
@@ -19,8 +19,13 @@
 <a href="overflow.html">Newest Server</a>
 </nav>
 <h1 class="top">Newest Server</h1>
-<div class="text">
-<p>So that we can keep our community small, we have decided to cap off our member count at 100. We plan to open another server on August 1st: However, we ask that you pay three dollars to help cover our costs. If you would like to be contacted when we start the world, please <a data-sumome-listbuilder-id="b5ccb95d-391b-4052-a46b-3fd3f3a5dc8c">click here</a>. Hope to see you soon! 
+<div class="texto">
+<p>So that we can keep our community small, we have decided to cap off our member count at 100. We plan to open another server on August 1st: However, we ask that you pay three dollars to help cover our costs to us on <a href="https://www.paypal.me/SupportScattercraft/3" target="_blank">PayPal</a>. If you would like to be contacted when we start the world, please apply below. Hope to see you soon!
+<br>
+<br>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeTtCa-bcST3UCwuVLy3MwWs9TDAx8rotFDuodDgnBFuRkhUg/viewform?embedded=true" width=90% height="2570px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<br>
+</div>
 <footer>
 Questions? Comments? Feel free to email us at scattercraftstaff@gmail.com.
 <div class="bottom">
