--- a/S1W1.html
+++ b/S1W1.html
@@ -19,7 +19,7 @@
 </nav>
 <h1 class="top">Season 1, World 1 Members</h1>
 <div class="text">
-<br>DrRedBuilds - Owner - 29/4/16
+<br>DrRedBuilds - Leader - 29/4/16
 <br>(Inactive) ThatGuyJimBob - Founder - 29/4/16
 <br>EpicDiamonight - Administrator - 29/4/16
 <br>Outersquid258 - Administrator - 22/6/17
@@ -136,6 +136,12 @@
   <div class="dropdown-content">
     <a href="S1W1.html">World 1</a>
   </div>
+  <div class="dropdown">
+  <button class="dropbtn">Season 1</button>
+  <div class="dropdown-content">
+    <a href="S1W2.html">World 2</a>
+  </div>
+</div>
 </div>
 </center>
 <br>
