--- a/S1W2.html
+++ b/S1W2.html
@@ -17,15 +17,12 @@
 <a href="rules.html">Rules</a>
 <a href="overflow.html">Newest Server</a>
 </nav>
-<h1 class="top">Season 0, World 1 Members</h1>
+<h1 class="top">Season 1, World 1 Members</h1>
 <div class="text">
-<br>ThatGuyJimBob - Owner/Founder - 29/4/16
-<br>DrRedBuilds - Founding Father - 29/4/16
-<br>EpicDiamonight - Founding Father - 29/4/16
-<br>BelgianTarHeel - Founding Father - 29/4/16
-<br>BassCannon9000 - Founding Father - 29/4/16
-<br>NuggetLatte - Founding Father - 29/4/16
-<br>TheGreatWizar - Founding Father - 29/4/16
+<br>DrRedBuilds - Leader - 29/4/16
+<br>AstateofG - Member - 1/8/17
+<br>MEngence - Member - 1/8/17
+<br>TheConstructorYT - Member - 1/8/17
 </div>
 <center>
 <div class="dropdown">
@@ -47,6 +44,13 @@
   </div>
 </div>
 </center>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <footer>
 Questions? Comments? Feel free to email us at scattercraftstaff@gmail.com.
 <div class="bottom">
