--- a/members.html
+++ b/members.html
@@ -29,6 +29,7 @@
   <button class="dropbtn">Season 1</button>
   <div class="dropdown-content">
     <a href="S1W1.html">World 1</a>
+	<a href="S1W2.html">World 2</a>
   </div>
 </div>
 </div>
