--- a/donations.html
+++ b/donations.html
@@ -21,15 +21,21 @@
 <div class="text">
 <p>If you play on ScatterCraft and want to make it better for everyone, feel free to make a monthly pledge or a one-time donation. All donations will go directly back into the server, making it more playable and enjoyable for everyone. 
 <p>You will get the donator rank on Discord and will be put in the official ScatterCraft donator hall (once we build it). Donating will make the server better for everyone, and we appreciate every donation, no matter how small. To donate, go <a href="https://www.paypal.me/SupportScattercraft" target="_blank">here</a>.
-<br><br>Current Monthly Donators:
-<br>Anonymous
-<br>RichieGrape
-<br>DrRedBuilds
-<br>EpicDiamonight
-<br><br>One-Time Donations:
-<br>RichieGrape - $20.00 - 4/7/17
-<br>Anonymous - $20.00 - 4/7/17
-<br>Legit_bokaj - $1.00 - 8/7/17
+<br><br>Donations:
+<br>$1.00 - Legit_bokaj - July 11, 2017
+<br>$10.00 - RichieGrape - July 12, 2017
+<br>$10.00 - T1MB3R - July 18, 2017
+<br>$5.00 - Anonymous - August 1, 2017
+<br>$10.00 - T1MB3R - August 1, 2017
+<br>$10.00 - RichieGrape - August 12, 2017
+<br>$2.00 - Legit_bokaj - August 12, 2017
+<br>$5.00 - Anonymous - September 1, 2017
+<br>$2.00 - Legit_bokaj - September 3, 2017
+<br>$10.00 - RichieGrape - September 14, 2017
+<br>$2.12 - SpiffyCheese - September 24, 2017
+<br>$30.00 - AstateofG - September 25, 2017
+<br>$20.00 - T1MB3R - October 1, 2017
+<br>$3.00 - Legit_bokaj - October 5, 2017
 </div>
 <br>
 <br>
