--- a/rules.html
+++ b/rules.html
@@ -19,14 +19,14 @@
 </nav>
 <h1 class="top">Rules</h1>
 <div class="text">
-<p>Okay, so we know that you have probably figured these out for yourself, but this is just a friendly reminder that, even though we have no plugins that stop you from breaking any of these rules, ScatterCraft is not an anarchy server. If we see you breaking any of these rules, we'll remind you and give you second chance. If we see a second violation, you will be banned for a year. We don't want to be that server that has 60 rules that you have to read the second you join. But we also want to make sure that people's hard work doesn't get ruined by one person. So here are the rules:
+<p>Okay, so we know that you have probably figured these out for yourself, but this is just a friendly reminder that, even though we have no plugins that stop you from breaking any of these rules, ScatterCraft is not an anarchy server. If we see you breaking any of these rules, we'll remind you and give you a second chance. If we see a second violation, you will be banned for a year. We don't want to be that server that has 60 rules that you have to read the second you join. But we also want to make sure that people's hard work doesn't get ruined by one person. So here are the rules:
 <br>
 <ol>
 <li><strong>No Griefing.</strong><br>This is the most important one. Don't destroy or tamper with other people's builds. Ever. If you accidentaly break something in or around someone's build, or if a creeper explodes, be courteous and take the time to fix your mess.</li>
 <li><strong>No Stealing.</strong><br>There is never any reason that you should take anything that belongs to another person. Please: don't be that person that makes everyone hide their storage systems because they're afraid of being raided.</li>
 <li><strong>No Hacking.</strong><br>If it wasn't already obvious (which we sincerely hope it was), we will not allow any form of hacked client on our server. Optifine and Shader Packs are fine, but that's it.</li>
 <li><strong>Be Nice in Chat.</strong><br>We're don't want to be that server that bans you for typing in all caps one time, but please: be respectful, calm, and appropriate (which includes swearing) in chat. It makes it nicer for everyone.</li>
-<li><strong>Use Common Sense.</strong><br>We know it's cliche, but "Do unto others as you would have them do unto you" is a really great principle to follow on ScatterCraft. Most servers either enforce their rules with plugins or have no rules, which means that our server is much more close to "the real world" than most servers. This means that most things that most moral principles that you should follow in real life are good to follow on ScatterCraft. </li>
+<li><strong>Use Common Sense.</strong><br>This needs no explanation. Be ethical, be nice, and be respectful. </li>
 <li><strong>Let Us Know You Care.</strong><br>So that we know that you have actually read our rules, in your response to our final question on our application, please include the sentence: "I have read the rules and understand them". Also, please take the time to be deatailed in why you want to join ScatterCraft. This lets us know that you actually care about joining. 
 </ol>
 </div>
