--- a/S2W1.html
+++ b/S2W1.html
@@ -133,6 +133,12 @@
 	<a href="S1W2.html">World 2</a>
   </div>
 </div>
+<div class="dropdown">
+  <button class="dropbtn">Season 2</button>
+  <div class="dropdown-content">
+    <a href="S2W1.html">World 1</a>
+  </div>
+</div>
 </center>
 <br>
 <br>
