--- a/S1W2.html
+++ b/S1W2.html
@@ -19,10 +19,21 @@
 </nav>
 <h1 class="top">Season 1, World 2 Members</h1>
 <div class="text">
-<br>DrRedBuilds - Leader - 29/4/16
-<br>AstateofG - Member - 1/8/17
-<br>MEngence - Member - 1/8/17
-<br>TheConstructorYT - Member - 1/8/17
+<br>DrRedBuilds - Leader
+<br>AstateofG - Administrator
+<br>LeilaBlue - Administrator 
+<br>freakyautumn - Moderator 
+<br>Viking_Pilot123 - Moderator
+<br>noahbot - Member
+<br>TheConstructorYT - Member  
+<br>BBReid29 - Member 
+<br>tomv99 - Member 
+<br>skullkingdude - Member 
+<br>MEngence - Member
+<br>TheConstructorYT - Member
+<br>DmLightning - Member 
+<br>RichieGrape - Member
+<br>SpiffyCheese - Member
 </div>
 <center>
 <div class="dropdown">
