--- a/overflow.html
+++ b/overflow.html
@@ -20,7 +20,7 @@
 </nav>
 <h1 class="top">Newest Server</h1>
 <div class="texto">
-<p>So that we can keep our community small, we have decided to cap off our member count at 100. As of August 1st, 2017, we have opened another server that we are currently accepting applications to: However, we ask that you pay three dollars to help cover our costs to us on <a href="https://www.paypal.me/SupportScattercraft/3" target="_blank">PayPal</a>. If you would like to be a part of the new ScatterCraft community, please apply below and join our <a href="http://discordapp.com/invite/9Vyc47d">Discord server</a>. Hope to see you soon!
+<p>So that we can keep our community small, we have decided to cap off our member count at 100. As of August 1st, 2017, we have opened another server that we are currently accepting applications to: However, we ask that you pay three dollars to help cover our costs to us on <a href="https://www.paypal.me/SupportScattercraft/3" target="_blank">PayPal</a>. If you would like to be a part of the new ScatterCraft community, please apply below and join our <a target="_blank" href="http://discordapp.com/invite/9Vyc47d">Discord server</a>. Hope to see you soon!
 <br>
 <br>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeTtCa-bcST3UCwuVLy3MwWs9TDAx8rotFDuodDgnBFuRkhUg/viewform?embedded=true" width=90% height="2570px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
