--- a/donations.html
+++ b/donations.html
@@ -36,6 +36,9 @@
 <br>$30.00 - AstateofG - September 25, 2017
 <br>$20.00 - T1MB3R - October 1, 2017
 <br>$3.00 - Legit_bokaj - October 5, 2017
+<br>$20.00 - Anonymous - January 2, 2018
+<br>$21.00 - AstateofG - May 1, 2018
+<br>
 </div>
 <br>
 <br>
