--- a/rules.html
+++ b/rules.html
@@ -27,7 +27,7 @@
 <li><strong>No Hacking.</strong><br>If it wasn't already obvious (which we sincerely hope it was), we will not allow any form of hacked client on our server. Optifine and Shader Packs are fine, but that's it.</li>
 <li><strong>Be Nice in Chat.</strong><br>We're don't want to be that server that bans you for typing in all caps one time, but please: be respectful, calm, and appropriate (which includes swearing) in chat. It makes it nicer for everyone.</li>
 <li><strong>Use Common Sense.</strong><br>This needs no explanation. Be ethical, be nice, and be respectful. </li>
-<li><strong>Let Us Know You Care.</strong><br>So that we know that you have actually read our rules, in your response to our final question on our application, please include the sentence: "I have read the rules and understand them". Also, please take the time to be deatailed in why you want to join ScatterCraft. This lets us know that you actually care about joining. 
+<li><strong>Let Us Know You Care.</strong><br>So that we know that you have actually read our rules, in your response to our final question on our application, please include the sentence: "I have read the rules and understand them". Also, please take the time to be detailed in why you want to join ScatterCraft. This lets us know that you actually care about joining. 
 </ol>
 </div>
 <br>
